<resources>
    <string name="app_name">Geo Tracker</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_message">Input message</string>

    <!-- Strings related to login -->
    <string name="prompt_address">Activation server</string>
    <string name="prompt_login">Pin code</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Activate</string>
    <string name="action_scan_qr">Scan QR code</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <!-- Menu -->
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="start_service">Start updates</string>
    <string name="stop_service">Stop updates</string>
    <string name="service_message">"Automatic location updates %s"</string>
    <string name="message_hint">Message to MQTT in JSON format</string>
    <string name="reset_settings">Reset settings</string>
    <string name="open_auto_start_menu">Autostart settings</string>

    <string name="notification_title">Location tracker</string>
    <string name="location_update_success">Updated: %1$s</string>
</resources>
