<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_test"
        android:title="@string/stress_test"
        android:icon="@drawable/ic_fire"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/menu_item_control_service"
        android:title="@string/start_service"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="never"/>

</menu>